otp send API ready

--- a/backend/templates/otp.html
+++ b/backend/templates/otp.html
@@ -123,11 +123,11 @@
 
         <div class="content">
             <h2>Verify Your Email Address</h2>
-            <p>Hi {{ user_name }},</p>
+            <p>Hi user,</p>
             <p>You recently requested to access your account. Please use the following One-Time Password (OTP) to complete your request. This code is valid for 10 minutes.</p>
             
             <div class="otp-box">
-                <p class="otp-code">{{ otp_code }}</p>
+                <p class="otp-code">{{ otp }}</p>
             </div>
             
             <p class="security-notice">
